refactor(jakarta-jaxb): use idiomatic dmx-fun API in adapter implementations
  Replace imperative if/else branches with functional style throughout the
  fun-jakarta-jaxb adapters:

  - OptionJsonbAdapter: use Option.map + getOrElse and Option.ofNullable
  - ResultJsonbAdapter: use peek + peekError instead of isOk branching
  - EitherJsonbAdapter: use peek + peekLeft instead of isRight branching
  - ResultXmlAdapter: use peek + peekError in marshal
  - TryJsonbAdapter: remove @Nullable import, inline message null-check
  - NonEmptyListJsonbAdapter: use getFirst() and remove redundant null check